Explain the word Univitatia.

--- a/tex/p037.tex
+++ b/tex/p037.tex
@@ -77,7 +77,7 @@
 \usection{9.\bibnobreakspace Permanent Citizens of the Local Universe}
 \vs p037 9:1 As with the super\hyp{} and central universes, the local universe has its orders of permanent citizenship. These include the following created types:
 \vs p037 9:2 \ublistelem{1.}\bibnobreakspace Susatia.
-\vs p037 9:3 \ublistelem{2.}\bibnobreakspace Univitatia.
+\vs p037 9:3 \ublistelem{2.}\bibnobreakspace Univitatia\fnst{\textbf{Univitatia}, i.e. \bibemph{one-lifers}, beings living one life.}.
 \vs p037 9:4 \ublistelem{3.}\bibnobreakspace Material Sons.
 \vs p037 9:5 \ublistelem{4.}\bibnobreakspace Midway Creatures.
 \vs p037 9:6 \pc These natives of the local creation, together with the Spirit\hyp{}fused ascenders and the spironga (who are otherwise classified), constitute a relatively permanent citizenship. These orders of beings are by and large neither ascending nor descending. They are all experiential creatures, but their enlarging experience continues to be available to the universe on their level of origin. While this is not wholly true of the Adamic Sons and midway creatures, it is relatively true of these orders.
