--- a/tex/p189.tex
+++ b/tex/p189.tex
@@ -18,7 +18,7 @@
 \vs p189 1:12 Jesus now began the contacts of the morontia level, being introduced, as a creature, to the requirements of the life he had chosen to live for a short time on Urantia. This initiation into the morontia world required more than an hour of earth time and was twice interrupted by his desire to communicate with his former associates in the flesh as they came out from Jerusalem wonderingly to peer into the empty tomb to discover what they considered evidence of his resurrection.
 \vs p189 1:13 Now is the mortal transit of Jesus --- the morontia resurrection of the Son of Man --- completed. The transitory experience of the Master as a personality midway between the material and the spiritual has begun. And he has done all this through power inherent within himself; no personality has rendered him any assistance. He now lives as Jesus of morontia, and as he begins this morontia life, the material body of his flesh lies there undisturbed in the tomb. The soldiers are still on guard, and the seal of the governor about the rocks has not yet been broken.
 \usection{2.\bibnobreakspace The Material Body of Jesus}
-\vs p189 2:1 At 03:10, as the resurrected Jesus fraternized with the assembled morontia personalities from the 7 mansion worlds of Satania, the chief of archangels --- the angels of the resurrection --- approached Gabriel and asked for the mortal body of Jesus. Said the chief of the archangels: “We may not participate in the morontia resurrection of the bestowal experience of Michael our sovereign, but we would have his mortal remains put in our custody for immediate dissolution. We do not propose to employ our technique of dematerialization; we merely wish to invoke the process of accelerated time. It is enough that we have seen the Sovereign live and die on Urantia; the hosts of heaven would be spared the memory of enduring the sight of the slow decay of the human form of the Creator and Upholder of a universe. In the name of the celestial intelligences of all Nebadon, I ask for a mandate giving me the custody of the mortal body of Jesus of Nazareth and empowering us to proceed with its immediate dissolution.”
+\vs p189 2:1 At 03:10, as the resurrected Jesus fraternized with the assembled morontia personalities from the 7 mansion worlds of Satania, the chief of archangels --- the angels of the resurrection --- approached Gabriel and asked for the mortal body of Jesus. Said the chief of the archangels: “We may not participate in the morontia resurrection of the bestowal experience of Michael our sovereign, but we would have his mortal remains put in our custody for immediate dissolution. We do not propose to employ our technique of dematerialization; we merely wish to invoke the process of accelerated time\fnst{\textbf{accelerated time}, Both this and the ``turning of water into wine'' can be explained by invoking the \bibemph{locally-coherent time hypothesis}, presented in the book А.~Бич ``Природа времени: Гипотеза о происхождении и физической сущности времени'', 2002, АСТ.}. It is enough that we have seen the Sovereign live and die on Urantia; the hosts of heaven would be spared the memory of enduring the sight of the slow decay of the human form of the Creator and Upholder of a universe. In the name of the celestial intelligences of all Nebadon, I ask for a mandate giving me the custody of the mortal body of Jesus of Nazareth and empowering us to proceed with its immediate dissolution.”
 \vs p189 2:2 And when Gabriel had conferred with the senior Most High of Edentia, the archangel spokesman for the celestial hosts was given permission to make such disposition of the physical remains of Jesus as he might determine.
 \vs p189 2:3 After the chief of archangels had been granted this request, he summoned to his assistance many of his fellows, together with a numerous host of the representatives of all orders of celestial personalities, and then, with the aid of the Urantia midwayers, proceeded to take possession of Jesus’ physical body. This body of death was a purely material creation; it was physical and literal; it could not be removed from the tomb as the morontia form of the resurrection had been able to escape the sealed sepulchre. By the aid of certain morontia auxiliary personalities, the morontia form can be made at one time as of the spirit so that it can become indifferent to ordinary matter, while at another time it can become discernible and contactable to material beings, such as the mortals of the realm.
 \vs p189 2:4 As they made ready to remove the body of Jesus from the tomb preparatory to according it the dignified and reverent disposal of near\hyp{}instantaneous dissolution, it was assigned the secondary Urantia midwayers to roll away the stones from the entrance of the tomb. The larger of these two stones was a huge circular affair, much like a millstone, and it moved in a groove chiselled out of the rock, so that it could be rolled back and forth to open or close the tomb. When the watching Jewish guards and the Roman soldiers, in the dim light of the morning, saw this huge stone begin to roll away from the entrance of the tomb, apparently of its own accord --- without any visible means to account for such motion --- they were seized with fear and panic, and they fled in haste from the scene. The Jews fled to their homes, afterwards going back to report these doings to their captain at the temple. The Romans fled to the fortress of Antonia and reported what they had seen to the centurion as soon as he arrived on duty.
