--- a/tex/p032.tex
+++ b/tex/p032.tex
@@ -8,7 +8,7 @@
 \vs p032 1:1 The preuniverse manipulations of space\hyp{}force and the primordial energies are the work of the Paradise Master Force Organizers; but in the superuniverse domains, when emergent energy becomes responsive to local or linear gravity, they retire in favour of the power directors of the superuniverse concerned.
 \vs p032 1:2 These power directors function alone in the prematerial and postforce phases of a local universe creation. There is no opportunity for a Creator Son to begin universe organization until the power directors have effected the mobilization of the space\hyp{}energies sufficiently to provide a material foundation --- literal suns and material spheres --- for the emerging universe.
 \vs p032 1:3 \pc The local universes are all approximately of the same energy potential, though they differ greatly in physical dimensions and may vary in visible\hyp{}matter content from time to time. The power charge and potential\hyp{}matter endowment of a local universe are determined by the manipulations of the power directors and their predecessors as well as by the Creator Son’s activities and by the endowment of the inherent physical control possessed by his creative associate.
-\vs p032 1:4 The energy charge of a local universe is approximately $10^{-5}$ of the force endowment of its superuniverse. In the case of Nebadon, your local universe, the mass materialization is a trifle less. Physically speaking, Nebadon possesses all of the physical endowment of energy and matter that may be found in any of the Orvonton local creations. The only physical limitation upon the developmental expansion of the Nebadon universe consists in the quantitative charge of space\hyp{}energy held captive by the gravity control of the associated powers and personalities of the combined universe mechanism.
+\vs p032 1:4 The energy charge of a local universe is approximately\fnst{\textbf{approximately}, In \bibref[15:4.6]{p015 4:6} we are told this is \bibemph{exactly} so, not \bibemph{approximately}. The only apparent difference is that there it refers to the \bibemph{energy charge}, whereas here to the \bibemph{force endowment} of a superuniverse.} 1/100,000\ts{th} of the force endowment of its superuniverse. In the case of Nebadon, your local universe, the mass materialization is a trifle less. Physically speaking, Nebadon possesses all of the physical endowment of energy and matter that may be found in any of the Orvonton local creations. The only physical limitation upon the developmental expansion of the Nebadon universe consists in the quantitative charge of space\hyp{}energy held captive by the gravity control of the associated powers and personalities of the combined universe mechanism.
 \vs p032 1:5 \pc When energy\hyp{}matter has attained a certain stage in mass materialization, a Paradise Creator Son appears upon the scene, accompanied by a Creative Daughter of the Infinite Spirit. Simultaneously with the arrival of the Creator Son, work is begun upon the architectural sphere which is to become the headquarters world of the projected local universe. For long ages such a local creation evolves, suns become stabilized, planets form and swing into their orbits, while the work of creating the architectural worlds which are to serve as constellation headquarters and system capitals continues.
 \usection{2.\bibnobreakspace Universe Organization}
 \vs p032 2:1 The Creator Sons are preceded in universe organization by the power directors and other beings originating in the Third Source and Centre. From the energies of space, thus previously organized, Michael, your Creator Son, established the inhabited realms of the universe of Nebadon and ever since has been painstakingly devoted to their administration. From pre\hyp{}existent energy these divine Sons materialize visible matter, project living creatures, and with the co\hyp{}operation of the universe presence of the Infinite Spirit, create a diverse retinue of spirit personalities.
