--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -844,25 +844,25 @@
 {Coordinate time as measured by the clock attached to a given moving observer's frame of reference}{0}
 \qstop
 
-\qstart{Is the Andromeda Galaxy (M31) inside or outside the space level of inhabited superuniverses?}
+\qstart{Is the Andromeda Galaxy (M31) inside or outside the space level of superuniverses?}
 {inside}{0}
 {outside}{1}
 {exactly on the border}{0}
 \qstop
 
 \qstart{The absolute of time is eternity and the absolute of space is...}
-{we do not know}{1}
+{unknown}{1}
 {infinite and unlimited space}{0}
 \qstop
 
 \qstart{Are time and space inseparable?}
+{yes, everywhere}{0}
 {only in the seven superuniverses}{1}
-{in the entire master universe}{0}
 \qstop
 
 \qstart{Which types of space motion are absolute?}
-{space respiration}{1}
 {alternate directional swings of the successive space levels}{1}
+{space respiration}{1}
 {compensatory or correlating movement}{0}
 \qstop
 
@@ -1231,51 +1231,51 @@
 \qstop
 
 \qstart{What is the number of elements on the architectural spheres compared to those on the evolutionary planets?}
-{twice as many}{1}
 {half as many}{0}
+{twice as many}{1}
 {the same number}{0}
 \qstop
 
 \qstart{How many perfect spheres does Havona consist of?}
-{1 billion}{1}
 {100 billion}{0}
 {500 million}{0}
+{1 billion}{1}
 {144000}{0}
 {7}{0}
 {12}{0}
 \qstop
 
 \qstart{Select all space conditions that exist from the periphery of Paradise to the inner borders of the seven superuniverses?}
-{The quiescent midspace zones impinging on Paradise}{1}
 {The clockwise processional of the three Paradise and the seven Havona circuits}{1}
 {The semiquiet space zone separating the Havona circuits from the dark gravity bodies of the central universe}{1}
 {The inner, counterclockwise-moving belt of the dark gravity bodies}{1}
+{The quiescent midspace zones impinging on Paradise}{1}
 {The second unique space zone dividing the two space paths of the dark gravity bodies}{1}
 {The outer belt of dark gravity bodies, revolving clockwise around Paradise}{1}
 {A third space zone—a semiquiet zone—separating the outer belt of dark gravity bodies from the innermost circuits of the seven superuniverses}{1}
 \qstop
 
 \qstart{How many circuits are the billion worlds of Havona arranged in?}
-{7}{1}
 {12}{0}
 {3}{0}
 {4}{0}
 {1000}{0}
 {1024}{0}
+{7}{1}
 \qstop
 
 \qstart{How many worlds are in the innermost circuit of Havona?}
-{35 million+}{1}
 {245 million+}{0}
 {25 million+}{0}
 {1 million+}{0}
+{35 million+}{1}
 {365}{0}
 \qstop
 
 \qstart{How many worlds are in the outermost circuit of Havona?}
 {35 million+}{0}
-{245 million+}{1}
 {25 million+}{0}
+{245 million+}{1}
 {1 million+}{0}
 {365}{0}
 \qstop
@@ -1296,40 +1296,40 @@
 \qstop
 
 \qstart{How does the length of year change from circuit to circuit in Havona?}
-{decreases from the outermost to the innermost circuit}{1}
 {increases from the outermost to the innermost circuit}{0}
 {stays the same}{0}
+{decreases from the outermost to the innermost circuit}{1}
 \qstop
 
 \qstart{Where is the length of Paradise-Havona day decided and broadcast from?}
-{the seven sacred spheres of the Infinite Spirit}{1}
 {the seven sacred spheres of the Universal Father}{0}
-{the seven sacred spheres of the Eternal Son}{0}
 {on one of the billion perfect spheres of Havona}{0}
+{the seven sacred spheres of the Infinite Spirit}{1}
 {Isle of Paradise}{0}
+{the seven sacred spheres of the Eternal Son}{0}
 \qstop
 
 \qstart{How many planes do the three circuits of Paradise satellites and the seven circuits of Havona worlds move in?}
-{one}{1}
 {seven}{0}
 {ten}{0}
+{one}{1}
 {three}{0}
 \qstop
 
 \qstart{Based on what periodic movement is the standard Paradise-Havona day defined?}
-{revolution of the inner Havona circuit around the Isle of Paradise}{1}
 {revolution of the outer Havona circuit around the Isle of Paradise}{0}
 {average revolution of all Havona circuits around the Isle of Paradise}{0}
 {arbitrarily decided by the Paradise Deities}{0}
 {space respiration}{0}
+{revolution of the inner Havona circuit around the Isle of Paradise}{1}
 \qstop
 
 
 \qstart{One Paradise-Havona day is equivalent to how much Urantia time?}
 {100 years}{0}
 {30 days}{0}
-{15 days}{0}
 {1000 years}{1}
+{15 days}{0}
 {1 day}{0}
 \qstop
 
@@ -1340,18 +1340,18 @@
 \qstop
 
 \qstart{How many basic chemical elements does the material of Havona consist of?}
-{1000}{1}
 {100}{0}
 {256}{0}
 {512}{0}
+{1000}{1}
 {1024}{0}
 {1000000}{0}
 \qstop
 
 \qstart{How many forms of energy exist in Havona?}
-{7}{1}
 {12}{0}
 {49}{0}
+{7}{1}
 {100}{0}
 {10}{0}
 \qstop
@@ -1365,17 +1365,17 @@
 \qstop
 
 \qstart{How many different sensation stimuli do Havona natives respond to?}
-{49}{1}
 {7}{0}
 {3}{0}
 {1000}{0}
 {4}{0}
+{49}{1}
 \qstop
 
 \qstart{How many of the 49 physical stimuli of Havona worlds would excite a reaction in Urantia mortals?}
-{0}{1}
 {49}{0}
 {7}{0}
+{0}{1}
 {5}{0}
 {4}{0}
 {47}{0}
@@ -1412,8 +1412,8 @@
 \qstop
 
 \qstart{Are decay and death a part of the cycle of life on the Havona worlds?}
-{no}{1}
 {yes}{0}
+{no}{1}
 \qstop
 
 \qstart{Are Havona natives reproducing beings?}
@@ -1422,79 +1422,79 @@
 \qstop
 
 \qstart{Which circuit of Havona are the new arrivals domiciled on?}
-{7}{1}
-{6}{0}
-{5}{0}
 {4}{0}
-{3}{0}
+{5}{0}
 {2}{0}
+{3}{0}
+{7}{1}
 {1}{0}
+{6}{0}
 \qstop
 
 \qstart{Which circuit of Havona are the pilgrims transferred to when they attain identity comprehension of their superuniverse Master Spirit?}
-{7}{0}
-{6}{1}
 {5}{0}
-{4}{0}
 {3}{0}
+{4}{0}
+{6}{1}
 {2}{0}
+{7}{0}
 {1}{0}
 \qstop
 
 \qstart{Which circuit of Havona are the pilgrims transferred to when they attain realization of Supremacy?}
-{7}{0}
-{6}{0}
-{5}{1}
-{4}{0}
-{3}{0}
 {2}{0}
 {1}{0}
+{3}{0}
+{6}{0}
+{7}{0}
+{4}{0}
+{5}{1}
 \qstop
 
 \qstart{Which circuit of Havona are the pilgrims transferred to when they attain the Infinite Spirit?}
-{7}{0}
-{6}{0}
-{5}{0}
 {4}{1}
+{7}{0}
 {3}{0}
-{2}{0}
+{5}{0}
 {1}{0}
+{2}{0}
+{6}{0}
 \qstop
 
 \qstart{Which circuit of Havona are the pilgrims transferred to when they attain the Eternal Son?}
+{4}{0}
 {7}{0}
 {6}{0}
-{5}{0}
-{4}{0}
-{3}{1}
 {2}{0}
 {1}{0}
+{3}{1}
+{5}{0}
 \qstop
 
 \qstart{Which circuit of Havona are the pilgrims transferred to when they have recognized the Universal Father?}
-{7}{0}
-{6}{0}
-{5}{0}
-{4}{0}
 {3}{0}
-{2}{1}
 {1}{0}
+{2}{1}
+{6}{0}
+{4}{0}
+{7}{0}
+{5}{0}
 \qstop
 
 \qstart{Which circuit of Havona are the pilgrims transferred to when they have been accepted into the service of Paradise?}
 {7}{0}
-{6}{0}
-{5}{0}
-{4}{0}
-{3}{0}
 {2}{0}
+{5}{0}
 {1}{1}
+{4}{0}
+{6}{0}
+{3}{0}
 \qstop
 
 \qstart{Which of the Havona worlds can a pilgrim of ascent visit without the need to be ensupernaphimed?}
-{all worlds of those circuits which have already been traversed}{1}
 {all worlds of all circuits}{0}
 {all worlds of the present circuit only}{0}
+{all worlds of those circuits which have already been traversed}{1}
 {none of them}{0}
 \qstop
 
@@ -1503,24 +1503,24 @@
 \qstart{How many Reflective Spirits are there?}
 {7}{0}
 {3}{0}
-{49}{0}
 {50}{1}
+{49}{0}
 {144000}{0}
 \qstop
 
 \qstart{Who is the chief of the Reflective Spirits?}
-{Majeston}{1}
 {Father Melchizedek}{0}
 {Gabriel}{0}
 {Michael of Nebadon}{0}
 {Infinite Spirit}{0}
+{Majeston}{1}
 {Father Reflective Spirit \#1}{0}
 \qstop
 
 \qstart{How long is the standard (Uversa) day?}
 {1 Urantia day}{0}
-{30 Urantia days}{1}
 {1 Urantia year}{0}
+{30 Urantia days}{1}
 {1000 Urantia years}{0}
 \qstop
 
@@ -1618,8 +1618,8 @@
 \qstop
 
 \qstart{Who are the rulers of the seven evolutionary superuniverses?}
-{Ancients of Days}{1}
 {Eternals of Days}{0}
+{Ancients of Days}{1}
 {Perfections of Days}{0}
 {Recents of Days}{0}
 {Faithfuls of Days}{0}
@@ -1627,10 +1627,10 @@
 \qstop
 
 \qstart{Which curve do the seven superuniverses traverse in space?}
-{Ellipse}{1}
 {Circle}{0}
 {Cardioid}{0}
 {Archimedean Spiral}{0}
+{Ellipse}{1}
 {Lemniscate}{0}
 {Epicycloid}{0}
 {Hypocycloid}{0}
@@ -1640,14 +1640,14 @@
 \qstart{Who knows the location and name of every inhabited world in space?}
 {Ancients of Days}{0}
 {Architects of the Master Universe}{0}
-{Universal Father}{1}
 {Paradise Creator Sons}{0}
+{Universal Father}{1}
 {Universal Censors}{0}
 \qstop
 
 \qstart{Each inhabited planet is presided over by ...}
-{Planetary Prince}{1}
 {Governor General}{0}
+{Planetary Prince}{1}
 {Chief Archangel}{0}
 {God}{0}
 {Jesus Christ}{0}
@@ -1655,11 +1655,11 @@
 \qstop
 
 \qstart{Each local system has an architectural sphere as its headquarters and is ruled by ...}
-{a System Sovereign}{1}
 {an Ancient of Days}{0}
 {three Recents of Days}{0}
 {one of the Seven Master Spirits}{0}
 {Creator Son and Creative Mother Spirit}{0}
+{a System Sovereign}{1}
 {three Vorondadek Sons, the Most Highs}{0}
 \qstop
 
@@ -1668,44 +1668,44 @@
 {Ancients of Days}{0}
 {Recents of Days}{0}
 {Seven Master Spirits}{0}
-{Creator Son and Creative Mother Spirit}{0}
 {three Vorondadek Sons, the Most Highs}{1}
+{Creator Son and Creative Mother Spirit}{0}
 \qstop
 
 \qstart{Who serves as an ambassador of the Paradise Trinity and an observer on each constellation?}
-{a Faithful of Days}{1}
 {three Faithfuls of Days}{0}
+{a Faithful of Days}{1}
 {a Recent of Days}{0}
 {seven Recents of Days}{0}
 \qstop
 
 \qstart{Each local universe has a magnificent architectural sphere as its headquarters and is ruled by ...}
-{a Paradise Creator Son}{1}
 {a Union of Days}{0}
 {a Recent of Days}{0}
 {one of the Seven Master Spirits}{0}
+{a Paradise Creator Son}{1}
 {three Vorondadek Sons, the Most Highs}{0}
 \qstop
 
 \qstart{Who serves as a representative of the Paradise Trinity on each local universe?}
-{a Union of Days}{1}
 {three Faithfuls of Days}{0}
 {a Recent of Days}{0}
 {seven Recents of Days}{0}
 {a Faithful of Days}{0}
+{a Union of Days}{1}
 \qstop
 
 \qstart{How many local universes constitute a minor sector?}
-{100}{1}
 {10}{0}
 {24}{0}
 {100000}{0}
 {70}{0}
+{100}{1}
 \qstop
 
 \qstart{How many inhabited worlds can there be in a minor sector?}
-{10 billion}{0}
 {1 billion}{1}
+{10 billion}{0}
 {100 million}{0}
 {1 trillion}{0}
 {700 million}{0}
@@ -1720,19 +1720,19 @@
 \qstop
 
 \qstart{How many minor sectors constitute a major sector?}
-{100}{1}
 {10}{0}
 {24}{0}
 {100000}{0}
 {70}{0}
+{100}{1}
 \qstop
 
 \qstart{How many inhabited worlds can there be in a major sector?}
-{100 billion}{1}
 {1 billion}{0}
-{100 million}{0}
 {1 trillion}{0}
+{100 billion}{1}
 {700 million}{0}
+{100 million}{0}
 \qstop
 
 \qstart{Each major sector has a superb architectural sphere as its headquarters and is ruled by ...}
@@ -1760,11 +1760,11 @@
 \qstop
 
 \qstart{How many major sectors constitute a superuniverse?}
-{10}{1}
 {100}{0}
 {24}{0}
 {100000}{0}
 {70}{0}
+{10}{1}
 \qstop
 
 \qstart{Each superuniverse has an enormous and glorious architectural sphere as its headquarters and is ruled by ...}
@@ -1772,8 +1772,8 @@
 {three Unions of Days}{0}
 {three Recents of Days}{0}
 {three Perfections of Days}{0}
-{three Vorondadek Sons, the Most Highs}{0}
 {three Ancients of Days}{1}
+{three Vorondadek Sons, the Most Highs}{0}
 \qstop
 
 \qstart{How many inhabited worlds can there be in a superuniverse?}
