More appropriate form of the numeral at 22:10.7.

--- a/tex/p022.tex
+++ b/tex/p022.tex
@@ -93,7 +93,7 @@
 \vs p022 10:4 \pc Not long since I was directed to head a commission of six --- one of each of the high sons --- assigned to the study of three problems pertaining to a group of new universes in the south parts of Orvonton. I was made acutely aware of the value of the High Son Assistants when I made requisition on the chief of their order on Uversa for temporary assignment of such secretaries to my commission. The first of our ideas was represented by a High Son Assistant on Uversa, who was forthwith attached to our group. Our second problem was embodied in a High Son Assistant assigned to superuniverse number three. We secured much help from this source through the central universe clearinghouse for the co\hyp{}ordination and dissemination of essential knowledge, but nothing comparable to the assistance afforded by the actual presence of a personality who \bibemph{is} a concept creature\hyp{}trinitized in supremacy and Deity\hyp{}trinitized in finality. Concerning our third problem, the records of Paradise disclosed that such an idea had never been creature trinitized.
 \vs p022 10:5 \pc High Son Assistants are unique and original personalizations of tremendous concepts and stupendous ideals. And as such they are able to impart inexpressible illumination to our deliberations from time to time. When I am acting on some remote assignment out in the universes of space, think what it means, by way of assistance, if I am so fortunate as to have attached to my mission a High Son Assistant who is the fullness of divine concept regarding the very problem I have been sent to attack and solve; and I have repeatedly had this very experience. The only difficulty with this plan is that no superuniverse can have a complete edition of these trinitized ideas; we only get \bibfrac{1}{7}\ts{th} of these beings; so it is only about one time in seven that we enjoy the personal association of these beings even when the records indicate that the idea has been trinitized.
 \vs p022 10:6 We could use to great advantage much larger numbers of these beings on Uversa. Because of their value to the superuniverse administrations, we, in every way possible, encourage the pilgrims of space and also the residents of Paradise to attempt trinitization after they have contributed to one another those experiential realities which are essential to the enactment of such creative adventures.
-\vs p022 10:7 \pc We now have in our superuniverse about $1.25 \times 10^6$ High Son Assistants, and they serve on both the major and minor sectors, even as they function on Uversa. They very often accompany us on our assignments to the remote universes. High Son Assistants are not permanently assigned to any Son or to any commission. They are in constant circulation, serving where the idea or ideal which they \bibemph{are} can best further the eternal purposes of the Paradise Trinity, whose sons they have become.
+\vs p022 10:7 \pc We now have in our superuniverse about one and a quarter million High Son Assistants, and they serve on both the major and minor sectors, even as they function on Uversa. They very often accompany us on our assignments to the remote universes. High Son Assistants are not permanently assigned to any Son or to any commission. They are in constant circulation, serving where the idea or ideal which they \bibemph{are} can best further the eternal purposes of the Paradise Trinity, whose sons they have become.
 \vs p022 10:8 They are touchingly affectionate, superbly loyal, exquisitely intelligent, supremely wise --- regarding a single idea --- and transcendently humble. While they can impart to you the lore of the universe concerning their one idea or ideal, it is well\hyp{}nigh pathetic to observe them seeking knowledge and information on hosts of other subjects, even from the ascending mortals.
 \vs p022 10:9 \pc And this is the narrative of the origin, nature, and functioning of certain of those who are called the Trinitized Sons of God, more particularly of those who have passed through the divine embrace of the Paradise Trinity, and who have then been assigned to the services of the superuniverses, there to give wise and understanding co\hyp{}operation with the administrators of the Ancients of Days in their untiring efforts to facilitate the inward progress of the ascending mortals of time toward their immediate Havona destination and their eventual Paradise goal.
 \vsetoff
