More appropriate form of the numeral at 15:7.12

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -107,7 +107,7 @@
 \vs p015 7:9 \pc \bibemph{Umajor the fifth,} the headquarters of your major sector, Splandon, is surrounded by the 70 spheres of the advancing intellectual training of the superuniverse.
 \vs p015 7:10 \pc \bibemph{Uversa,} the headquarters of Orvonton, your superuniverse, is immediately surrounded by the 7 higher universities of advanced spiritual training for ascending will creatures. Each of these 7 clusters of wonder spheres consists of 70 specialized worlds containing thousands upon thousands of replete institutions and organizations devoted to universe training and spirit culture wherein the pilgrims of time are re\hyp{}educated and re\hyp{}examined preparatory to their long flight to Havona. The arriving pilgrims of time are always received on these associated worlds, but the departing graduates are always dispatched for Havona direct from the shores of Uversa.
 \vs p015 7:11 Uversa is the spiritual and administrative headquarters for approximately one trillion inhabited or inhabitable worlds. The glory, grandeur, and perfection of the Orvonton capital surpass any of the wonders of the time\hyp{}space creations.
-\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than $5 \times 10^{11}$\fnst{\textbf{slightly less than $5\times 10^{11}$}, The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the seven superuniverses.
+\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than 500 billion\fnst{\textbf{500 billion}, The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the seven superuniverses.
 \usection{8.\bibnobreakspace Energy Control and Regulation}
 \vs p015 8:1 The headquarters spheres of the superuniverses are so constructed that they are able to function as efficient power\hyp{}energy regulators for their various sectors, serving as focal points for the directionization of energy to their component local universes. They exert a powerful influence over the balance and control of the physical energies circulating through organized space.
 \vs p015 8:2 Further regulative functions are performed by the superuniverse power centres and physical controllers, living and semiliving intelligent entities constituted for this express purpose. These power centres and controllers are difficult of understanding; the lower orders are not volitional, they do not possess will, they do not choose, their functions are very intelligent but apparently automatic and inherent in their highly specialized organization. The power centres and physical controllers of the superuniverses assume direction and partial control of the 30 energy systems which comprise the gravita domain. The physical\hyp{}energy circuits administered by the power centres of Uversa require a little over 968,000,000 years to complete the encirclement of the superuniverse.
