Tidy up the quiz

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -1547,25 +1547,27 @@
 {The intelligence-ministry circuit, including the diversely functioning presence of the adjutant mind-spirits}{1}
 \qstop
 
-\qstart{What are the requisites for admission of a local universe to the councils of the Ancients of Days, membership in the superuniverse confederation?}
-{Physical Stability. The stars and planets of a local universe must be in equilibrium; the periods of immediate stellar metamorphosis must be over. The universe must be proceeding on a clear track; its orbit must be safely and finally settled.}{1}
-{Spiritual Loyalty. There must exist a state of universal recognition of, and loyalty to, the Sovereign Son of God who presides over the affairs of such a local universe. There must have come into being a state of harmonious co-operation between the individual planets, systems, and constellations of the entire local universe.}{1}
+\qstart{What are the requisites for admission of a local universe to the councils of the Ancients of Days?}
+{Not a single loss of Lanonandek Sons}{0}
+{Physical Stability}{1}
+{Spiritual Loyalty}{1}
+{Reach 10,000,000 inhabited worlds}{0}
 \qstop
 
-\qstart{Is our local universe of Nebadon admitted to the councils of the Ancients of Days as a member of superuniverse confederation?}
+\qstart{Is our local universe of Nebadon admitted to the councils of the Ancients of Days?}
 {yes}{0}
 {no}{1}
 \qstop
 
-\qstart{Is our local universe of Nebadon reckoned as belonging to the settled physical order of the superuniverse of Orvonton?}
+\qstart{Is our local universe's physical order settled?}
 {yes}{0}
 {no}{1}
 \qstop
 
-\qstart{How many Perfectors of Wisdom are assisting the three Ancients of Days in the superuniverse government?}
-{1 billion}{1}
+\qstart{How many Perfectors of Wisdom are assisting the three Ancients of Days?}
 {1000}{0}
 {1 million}{0}
+{1 billion}{1}
 {7}{0}
 {70}{0}
 \qstop
@@ -1576,10 +1578,10 @@
 \qstop
 
 \qstart{Which of these beings serve as ambassadors of one superuniverse in another?}
-{none, the superuniverses are completely isolated from each other}{1}
+{Solitary Messengers}{0}
 {Mighty Messengers}{0}
 {Those High in Authority}{0}
-{Solitary Messengers}{0}
+{none, the superuniverses are completely isolated from each other}{1}
 {Those Without Name and Number}{0}
 \qstop
 
@@ -1589,6 +1591,7 @@
 {666}{0}
 {606}{0}
 {5,342,482,337,666}{1}
+{5,287,480,037,666}{0}
 \qstop
 
 \qstart{Which of these are the components of the celestial coordinates of our planet in the grand universe?}
@@ -1838,41 +1841,41 @@
 {The movement of Orvonton and six associated superuniverses around Paradise and Havona, the counterclockwise processional of the superuniverse space level}{0}
 \qstop
 
-\qstart{How many architectural worlds there would be in the seven suoeruniverses if all the projected local universes and their component parts were established?}
-{500 billion}{1}
-{700 billion}{0}
+\qstart{How many architectural worlds there would be in the seven superuniverses if all the projected local universes and their component parts were established?}
+{453,313,764,407}{1}
+{500 billion}{0}
 {7 trillion}{0}
 {7 billion}{0}
 {5 billion}{0}
 \qstop
 
 \qstart{How many inhabited planets constitute a system?}
-{1000}{1}
 {1024}{0}
+{1000}{1}
 {500}{0}
 {777}{0}
 {1000000}{0}
 \qstop
 
 \qstart{How many systems constitute a constellation?}
-{100}{1}
 {10}{0}
 {24}{0}
 {100000}{0}
+{100}{1}
 {70}{0}
 \qstop
 
 \qstart{How many inhabited worlds can there be in a single constellation?}
-{100000}{1}
 {1000}{0}
 {1000000}{0}
+{100000}{1}
 {777}{0}
 \qstop
 
 \qstart{How many constellations constitute a local universe?}
-{100}{1}
 {10}{0}
 {24}{0}
+{100}{1}
 {100000}{0}
 {70}{0}
 \qstop
@@ -1915,8 +1918,8 @@
 \qstop
 
 \qstart{Which of these space bodies have had an evolutionary origin?}
-{The suns}{1}
 {The dark islands of space}{1}
+{The suns}{1}
 {Comets, meteors, and planetesimals}{1}
 {Planets (including inhabited)}{1}
 {Architectural spheres}{0}
@@ -2495,12 +2498,12 @@
 \qstop
 
 \qstart{How many of Those High in Authority are commissioned in the superuniverse of Orvonton?}
-{10 billion}{1}
-{1 billion}{1}
-{1 trillion}{0}
 {1 thousand}{0}
 {1 million}{0}
+{1 billion}{0}
 {7 billion}{0}
+{>10 billion}{1}
+{1 trillion}{0}
 \qstop
 
 \qpaper{23}{The Solitary Messengers}
@@ -3112,23 +3115,24 @@
 
 \qstart{For how long will our Sun continue to shine at its present efficiency?}
 {100 million years}{0}
-{1 billion years}{0}
+{5 billion years}{0}
 {25 billion years}{1}
 {unknown}{0}
+{indefinitely}{0}
 \qstop
 
-\qstart{When do the Supreme Power Centres play?}
-{never, they are always on duty}{1}
+\qstart{When do the Supreme Power Centres rest?}
 {about 10\% of their time}{0}
 {about 50\% of their time}{0}
 {about 1\% of their time}{0}
 {about 95\% of their time}{0}
+{never, they are always on duty}{1}
 \qstop
 
 \qstart{Do the Supreme Power Centres have a sense of humour?}
 {no, because they have no ascendant past to revert to and laugh at}{1}
 {yes, but nobody understands their jokes}{0}
-{yes, their jokes are the best in the Galaxy}{0}
+{yes, their jokes are the best in the grand universe}{0}
 {unrevealed}{0}
 \qstop
 
