Explain the name Immanuel

--- a/tex/p033.tex
+++ b/tex/p033.tex
@@ -32,7 +32,7 @@
 \vs p033 4:7 \pc Gabriel and his staff are not teachers; they are administrators. They were never known to depart from their regular work except when Michael was incarnated on a creature bestowal. During such bestowals Gabriel was ever attendant on the will of the incarnated Son, and with the collaboration of the Union of Days, he became the actual director of universe affairs during the later bestowals. Gabriel has been closely identified with the history and development of Urantia ever since the mortal bestowal of Michael.
 \vs p033 4:8 Aside from meeting Gabriel on the bestowal worlds and at the times of general\hyp{} and special\hyp{}resurrection roll calls, mortals will seldom encounter him as they ascend through the local universe until they are inducted into the administrative work of the local creation. As administrators, of whatever order or degree, you will come under the direction of Gabriel.
 \usection{5.\bibnobreakspace The Trinity Ambassadors}
-\vs p033 5:1 The administration of Trinity\hyp{}origin personalities ends with the government of the superuniverses. The local universes are characterized by dual supervision, the beginning of the father\hyp{}mother concept. The universe father is the Creator Son; the universe mother is the Divine Minister, the local universe Creative Spirit. Every local universe is, however, blessed with the presence of certain personalities from the central universe and Paradise. At the head of this Paradise group in Nebadon is the ambassador of the Paradise Trinity --- Immanuel of Salvington --- the Union of Days assigned to the local universe of Nebadon. In a certain sense this high Trinity Son is also the personal representative of the Universal Father to the court of the Creator Son; hence his name, Immanuel.
+\vs p033 5:1 The administration of Trinity\hyp{}origin personalities ends with the government of the superuniverses. The local universes are characterized by dual supervision, the beginning of the father\hyp{}mother concept. The universe father is the Creator Son; the universe mother is the Divine Minister, the local universe Creative Spirit. Every local universe is, however, blessed with the presence of certain personalities from the central universe and Paradise. At the head of this Paradise group in Nebadon is the ambassador of the Paradise Trinity --- Immanuel of Salvington --- the Union of Days assigned to the local universe of Nebadon. In a certain sense this high Trinity Son is also the personal representative of the Universal Father to the court of the Creator Son; hence his name, Immanuel\fnst{\textbf{Immanuel}, The Hebrew \textheb{עִמָּנוּאֵל} literally means ``God with us'' (cf. Isaiah~7:14, 8:8,10, Matthew~1:23).}.
 \vs p033 5:2 Immanuel of Salvington, number 611,121 of the sixth order of Supreme Trinity Personalities, is a being of sublime dignity and of such superb condescension that he refuses the worship and adoration of all living creatures. He bears the distinction of being the only personality in all Nebadon who has never acknowledged subordination to his brother Michael. He functions as adviser to the Sovereign Son but gives counsel only on request. In the absence of the Creator Son he might preside over any high universe council but would not otherwise participate in the executive affairs of the universe except as requested.
 \vs p033 5:3 This ambassador of Paradise to Nebadon is not subject to the jurisdiction of the local universe government. Neither does he exercise authoritative jurisdiction in the executive affairs of an evolving local universe except in the supervision of his liaison brethren, the Faithfuls of Days, serving on the headquarters of the constellations.
 \vs p033 5:4 The Faithfuls of Days, like the Union of Days, never proffer advice or offer assistance to the constellation rulers unless it is asked for. These Paradise ambassadors to the constellations represent the final personal presence of the Stationary Sons of the Trinity functioning in advisory roles in the local universes. Constellations are more closely related to the superuniverse administration than local systems, which are administered exclusively by personalities native to the local universe.
