Tidy up the numeral

--- a/tex/p031.tex
+++ b/tex/p031.tex
@@ -57,7 +57,7 @@
 \vs p031 9:1 The Architects of the Master Universe are the governing corps of the Paradise Transcendentalers. This governing corps numbers 28,011 personalities possessing master minds, superb spirits, and supernal absonites. The presiding officer of this magnificent group, the senior Master Architect, is the co\hyp{}ordinating head of all Paradise intelligences below the level of Deity.
 \vs p031 9:2 The 16\ts{th} proscription of the mandate authorizing these narratives says: “If deemed wise, the existence of the Architects of the Master Universe and their associates may be disclosed, but their origin, nature, and destiny may not be fully revealed.” We may, however, inform you that these Master Architects exist in 7 levels of the absonite. These 7 groups are classified as follows:
 \vs p031 9:3 \ublistelem{1.}\bibnobreakspace \bibemph{The Paradise Level.} Only the senior or first\hyp{}eventuated Architect functions on this highest level of the absonite. This ultimate personality --- neither Creator nor creature --- eventuated in the dawn of eternity and now functions as the exquisite co\hyp{}ordinator of Paradise and its 21 worlds of associated activities.
-\vs p031 9:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Havona Level.} The second Architect eventuation yielded three master planners and absonite administrators, and they have always been devoted to the co\hyp{}ordination of $10^9$ perfect spheres of the central universe. Paradise tradition asserts that these three Architects, with the counsel of the pre\hyp{}eventuated senior Architect, contributed to the planning of Havona, but we really do not know.
+\vs p031 9:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Havona Level.} The second Architect eventuation yielded three master planners and absonite administrators, and they have always been devoted to the co\hyp{}ordination of the one billion perfect spheres of the central universe. Paradise tradition asserts that these three Architects, with the counsel of the pre\hyp{}eventuated senior Architect, contributed to the planning of Havona, but we really do not know.
 \vs p031 9:5 \ublistelem{3.}\bibnobreakspace \bibemph{The Superuniverse Level.} The third absonite level embraces the 7 Master Architects of the 7 superuniverses, who now, as a group, spend about equal time in the company of the Seven Master Spirits on Paradise and with the Seven Supreme Executives on the 7 special worlds of the Infinite Spirit. They are the superco\hyp{}ordinators of the grand universe.
 \vs p031 9:6 \ublistelem{4.}\bibnobreakspace \bibemph{The Primary Space Level.} This group numbers 70 Architects, and we conjecture that they are concerned with the ultimate plans for the first universe of outer space, now mobilizing beyond the borders of the present 7 superuniverses.
 \vs p031 9:7 \ublistelem{5.}\bibnobreakspace \bibemph{The Secondary Space Level.} This fifth corps of Architects numbers 490, and again we conjecture that they must be concerned with the second universe of outer space, where already our physicists have detected definite energy mobilizations.
