Explain how esoterics commune with cells and organs

--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -24,7 +24,7 @@
 \vs p036 2:15 The planetary life\hyp{}planning laboratories are situated on the second satellite of this world number two. In these laboratories the Life Carriers and all their associates collaborate with the Melchizedeks in the effort to modify and possibly improve the life designed for implantation on the \bibemph{decimal planets} of Nebadon. The life now evolving on Urantia was planned and partially worked out on this very world, for Urantia is a decimal planet, a life\hyp{}experiment world. On 1 world in each 10 a greater variance in the standard life designs is permitted than on the other (nonexperimental) worlds.
 \vs p036 2:16 \pc \bibemph{World Number Three} is devoted to the conservation of life. Here various modes of life protection and preservation are studied and developed by the assistants and custodians of the Life Carrier corps. The life plans for every new world always provide for the early establishment of the life\hyp{}conservation commission, consisting of custodian specialists in the expert manipulation of the basic life patterns. On Urantia there were 24 such custodian commissioners, two for each fundamental or parent pattern of the architectural organization of the life material. On planets such as yours the highest form of life is reproduced by a life\hyp{}carrying bundle which possesses 24 pattern units. (And since the intellectual life grows out of, and upon the foundation of, the physical, there come into existence the four and twenty basic orders of psychic organization.)
 \vs p036 2:17 \pc \bibemph{Sphere Number Four} and its tributary satellites are devoted to the study of the evolution of creature life in general and to the evolutionary antecedents of any one life level in particular. The original life plasm of an evolutionary world must contain the full potential for all future developmental variations and for all subsequent evolutionary changes and modifications. The provision for such far\hyp{}reaching projects of life metamorphosis may require the appearance of many apparently useless forms of animal and vegetable life. Such by\hyp{}products of planetary evolution, foreseen or unforeseen, appear upon the stage of action only to disappear, but in and through all this long process there runs the thread of the wise and intelligent formulations of the original designers of the planetary life plan and species scheme. The manifold by\hyp{}products of biologic evolution are all essential to the final and full function of the higher intelligent forms of life, notwithstanding that great outward disharmony may prevail from time to time in the long upward struggle of the higher creatures to effect the mastery of the lower forms of life, many of which are sometimes so antagonistic to the peace and comfort of the evolving will creatures.
-\vs p036 2:18 \pc \bibemph{Number Five World} is concerned wholly with life associated with mind. Each of its satellites is devoted to the study of a single phase of creature mind correlated with creature life. Mind such as man comprehends is an endowment of the 7 adjutant mind\hyp{}spirits superimposed on the nonteachable or mechanical levels of mind by the agencies of the Infinite Spirit. The life patterns are variously responsive to these adjutants and to the different spirit ministries operating throughout the universes of time and space. The capacity of material creatures to effect spirit response is entirely dependent on the associated mind endowment, which, in turn, has directionized the course of the biologic evolution of these same mortal creatures.
+\vs p036 2:18 \pc \bibemph{Number Five World} is concerned wholly with life associated with mind. Each of its satellites is devoted to the study of a single phase of creature mind correlated with creature life. Mind such as man comprehends is an endowment of the 7 adjutant mind\hyp{}spirits superimposed on the nonteachable or mechanical levels of mind\fnst{\textbf{superimposed on the nonteachable or mechanical levels of mind}, That is the level of individual cells or organs composed of similar cells (or, more correctly, of tissues, which are made up of cells). Thus, when an esoteric guru ``asks'' his own (or someone else's!) heart to slow down or the liver to heal itself, he in effect communes with such nonteachable or mechanical level of mind.} by the agencies of the Infinite Spirit. The life patterns are variously responsive to these adjutants and to the different spirit ministries operating throughout the universes of time and space. The capacity of material creatures to effect spirit response is entirely dependent on the associated mind endowment, which, in turn, has directionized the course of the biologic evolution of these same mortal creatures.
 \vs p036 2:19 \pc \bibemph{World Number Six} is dedicated to the correlation of mind with spirit as they are associated with living forms and organisms. This world and its six tributaries embrace the schools of creature co\hyp{}ordination, wherein teachers from both the central universe and the superuniverse collaborate with the Nebadon instructors in presenting the highest levels of creature attainment in time and space.
 \vs p036 2:20 \pc \bibemph{The Seventh Sphere} of the Life Carriers is dedicated to the unrevealed domains of evolutionary creature life as it is related to the cosmic philosophy of the expanding factualization of the Supreme Being.
 \usection{3.\bibnobreakspace Life Transplantation}
