Explain who the "impetuous apostle" is.

--- a/tex/p038.tex
+++ b/tex/p038.tex
@@ -1,6 +1,6 @@
 \upaper{38}{Ministering Spirits of the Local Universe}
 \author{Melchizedek}
-\vs p038 0:1 There are three distinct orders of the personalities of the Infinite Spirit. The impetuous apostle understood this when he wrote respecting Jesus, “who has gone to heaven and is on the right hand of God, angels and authorities and powers being made subject to him.” Angels are the ministering spirits of time; authorities, the messenger hosts of space; powers, the higher personalities of the Infinite Spirit.
+\vs p038 0:1 There are three distinct orders of the personalities of the Infinite Spirit. The impetuous apostle\fnst{\textbf{The impetuous apostle}, i.e. Peter, cf. \bibref[139:3.4]{p139 3:4}, \bibref[158:7.3]{p158 7:3}, \bibref[179:3.5]{p179 3:5}, \bibref[192:1.3]{p192 1:3}. The quote is from 1~Peter~3:22.} understood this when he wrote respecting Jesus, “who has gone to heaven and is on the right hand of God, angels and authorities and powers being made subject to him.” Angels are the ministering spirits of time; authorities, the messenger hosts of space; powers, the higher personalities of the Infinite Spirit.
 \vs p038 0:2 \pc As the supernaphim in the central universe and the seconaphim in a superuniverse, so the seraphim, with the associated cherubim and sanobim, constitute the angelic corps of a local universe.
 \vs p038 0:3 The seraphim are all fairly uniform in design. From universe to universe, throughout all seven of the superuniverses, they show a minimum of variation; they are the most nearly standard of all spirit types of personal beings. Their various orders constitute the corps of the skilled and common ministers of the local creations.
 \usection{1.\bibnobreakspace Origin of Seraphim}
