Point out repetition in the Revelation

--- a/tex/p037.tex
+++ b/tex/p037.tex
@@ -73,7 +73,7 @@
 \vs p037 8:7 Of the \bibemph{Technical Advisers,} the legal minds of the realm, we have our quota, about 500,000,000. These beings are the living and circulating experiential law libraries of all space.
 \vs p037 8:8 Of the \bibemph{Celestial Recorders,} the ascendant seraphim, we have in Nebadon 75. These are the senior or supervising recorders. The advancing students of this order in training number almost 4 billion.
 \vs p037 8:9 The ministry of the 70 billion \bibemph{Morontia Companions} in Nebadon is described in those narratives dealing with the transition planets of the pilgrims of time.
-\vs p037 8:10 \pc Each universe has its own native angelic corps; nevertheless, there are occasions on which it is very helpful to have the assistance of those higher spirits of origin outside the local creation. Supernaphim perform certain rare and unique services; the present chief of Urantia seraphim is a primary supernaphim of Paradise. The reflective seconaphim are encountered wherever the superuniverse personnel is functioning, and a great many tertiaphim are of temporary service as Most High Assistants.
+\vs p037 8:10 \pc Each universe has its own native angelic corps; nevertheless, there are occasions on which it is very helpful to have the assistance of those higher spirits of origin outside the local creation. Supernaphim perform certain rare and unique services; the present chief of Urantia seraphim is a primary supernaphim of Paradise\fnst{\textbf{the present chief \ldots\ Paradise}, This fact has been already revealed in \bibref[27:0.2]{p027 0:2}}. The reflective seconaphim are encountered wherever the superuniverse personnel is functioning, and a great many tertiaphim are of temporary service as Most High Assistants.
 \usection{9.\bibnobreakspace Permanent Citizens of the Local Universe}
 \vs p037 9:1 As with the super\hyp{} and central universes, the local universe has its orders of permanent citizenship. These include the following created types:
 \vs p037 9:2 \ublistelem{1.}\bibnobreakspace Susatia.
