Show the number of notes and add a question to the quiz.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -3107,6 +3107,15 @@
 
 \qpaper{38}{Ministering Spirits of the Local Universe}
 
+\qstart{What was the name of the seraphim that did not allow John Zebedee to worship him?}
+{Salsatia}{0}
+{Susatia}{0}
+{Malavatia}{0}
+{Loyalatia}{1}
+{Uzziel}{0}
+{Raphael}{0}
+\qstop
+
 \qpaper{39}{The Seraphic Hosts}
 
 \qpaper{40}{The Ascending Sons of God}
