--- a/tex/title.tex
+++ b/tex/title.tex
@@ -49,8 +49,8 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \itshape
 The Standard Reference Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
-with Metric Measures, Textual Variants,\\
-Study Notes \&\ \totalfigures\ Illustrations\\[2ex]
+with Metric Measures, \totalnfncs\ Textual Variants,\\
+\totalnfnsts\ Study Notes \&\ \totalfigures\ Illustrations\\[2ex]
 }
 \tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\[1pt]}
 Edited by Tigran Aivazian\\[2ex]
